@@ -11,6 +11,25 @@
 
 static const char* FILE_NAME = "Net/SSLeay/SSL_CTX.c";
 
+// For set_default_verify_paths_windows method
+#ifdef _WIN32
+
+#include <stdio.h>
+#include <windows.h>
+#include <wincrypt.h>
+#include <cryptuiapi.h>
+#include <iostream>
+#include <tchar.h>
+
+#include "openssl\x509.h"
+
+#pragma comment (lib, "crypt32.lib")
+#pragma comment (lib, "cryptui.lib")
+
+#define MY_ENCODING_TYPE  (PKCS_7_ASN_ENCODING | X509_ASN_ENCODING)
+
+#endif
+
 __thread SPVM_ENV* thread_env;
 
 int32_t SPVM__Net__SSLeay__SSL_CTX__new(SPVM_ENV* env, SPVM_VALUE* stack) {
@@ -1984,6 +2003,48 @@ int32_t SPVM__Net__SSLeay__SSL_CTX__sess_set_remove_cb(SPVM_ENV* env, SPVM_VALUE
   SSL_CTX_sess_set_remove_cb(self, native_cb);
   
   return 0;
+}
+
+int32_t SPVM__Net__SSLeay__SSL_CTX__set_default_verify_paths_windows(SPVM_ENV* env, SPVM_VALUE* stack) {
+#if !_WIN32
+  env->die(env, stack, "Net::SSLeay::SSL_CTX#set_default_verify_paths_windows method is not supported on this system(!_WIN32)", __func__, FILE_NAME, __LINE__);
+  return SPVM_NATIVE_C_BASIC_TYPE_ID_ERROR_NOT_SUPPORTED_CLASS;
+#else
+  
+  int32_t error_id = 0;
+  
+  void* obj_self = stack[0].oval;
+  
+  SSL_CTX* self = env->get_pointer(env, stack, obj_self);
+  
+  HCERTSTORE hStore;
+  PCCERT_CONTEXT pContext = NULL;
+  X509 *x509;
+  X509_STORE *store = X509_get_cert_store(self);
+  
+  hStore = CertOpenSystemStore(NULL, L"ROOT");
+  
+  if (!hStore) {
+    return env->die(env, stack, "[Windows Error]CertOpenSystemStore failed.", __func__, FILE_NAME, __LINE__);
+  }
+  
+  while (pContext = CertEnumCertificatesInStore(hStore, pContext))
+  {
+    x509 = NULL;
+    x509 = d2i_X509(NULL, (const unsigned char **)&pContext->pbCertEncoded, pContext->cbCertEncoded);
+    if (x509)
+    {
+      int i = X509_STORE_add_cert(store, x509);
+      
+      X509_free(x509);
+    }
+  }
+  
+  CertFreeCertificateContext(pContext);
+  CertCloseStore(hStore, 0);
+  
+  return 0;
+#endif
 }
 
 int32_t SPVM__Net__SSLeay__SSL_CTX__DESTROY(SPVM_ENV* env, SPVM_VALUE* stack) {
